Update and rename 生日.html to index.html

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     border-radius:16px; padding:22px 20px 18px;
     box-shadow:0 20px 60px rgba(0,0,0,.35);
     transform-origin:50% 40%;
-    animation: popIn .38s ease-out;
+    animation: popIn .38 ease-out;
   }
   .loginBox h2{margin:4px 0 14px; text-align:center; font-weight:800; letter-spacing:.6px}
   .loginBox .hint{color:var(--muted); text-align:center; margin:-6px 0 14px; font-size:14px}
@@ -47,7 +47,7 @@
   .loginBox button{
     width:100%; padding:12px 14px; border-radius:12px; border:1px solid rgba(255,255,255,.25);
     background:linear-gradient(90deg,#2d355e,#394172); color:var(--text); font-weight:700; cursor:pointer;
-    transition:transform .06s ease;
+    transition:transform .06 ease;
   }
   .loginBox button:active{transform:translateY(1px)}
   .error{color:#ff8a80; font-size:14px; min-height:18px; text-align:center; margin:8px 0 0}
@@ -431,3 +431,4 @@ document.addEventListener('keydown', e=>{
 </script>
 </body>
 </html>
+
